added info pages w/o style

--- a/Project/templates/index.html
+++ b/Project/templates/index.html
@@ -12,14 +12,14 @@
        
         <nav>
             <ul style="list-style-type:none">
-              <li><a href="/">Frequently Asked Quesiton <br> </a></li> 
-              <li><a href="/">Payment Sugesstion</a></li>  
-              <li><a href="/">Avoid Scams</a></li>  
-              <li><a href="/">Personal Safety Tips</a></li>  
-              <li><a href="/">Contact Grit Marketplace Support </a></li>
+              <li><a href="/FrequentlyAskedQuestions.html">Frequently Asked Quesiton <br> </a></li> 
+              <li><a href="">Payment Sugesstion</a></li>  
+              <li><a href="/AvoidScams.html">Avoid Scams</a></li>  
+              <li><a href="/PersonalSafetyTips.html">Personal Safety Tips</a></li>  
+              <li><a href="/Support.html">Contact Grit Marketplace Support </a></li>
             </ul>
         </nav>
-        <img src="Home-dog.png" alt="retriver" style="width: auto;height: auto;">
+        <img src="/Project/templates/Home-dog.png" alt="retriver" style="width: auto;height: auto;">
     </div>
     <div class="right-section">
         <div class="row">
