--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,26 +14,27 @@
     padding: 0;
     background-color:rgb(253, 181, 21);
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
 
   }
 nav li{
     margin:10%
 }
 button{
-    border-radius: 12px;
-    font-weight: 500;
-    font-size: 16px;
-    color:#181a18;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    margin: 10px 3px;
-    cursor: pointer;
+  border-radius: 12px;
+  font-weight: 500;
+  font-size: 16px;
+  color: #1c1c1c;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block; /* Buttons will align horizontally if in a flex container */
+  font-size: 18px;
+  margin: 10px; /* Reduce margin to avoid overlap */
+  cursor: pointer;
 }
+
 .container {
     display: flex;
     height: 100vh; /* Full viewport height */
@@ -73,7 +74,7 @@ tr {
     border-collapse: collapse;
 }
 .column:nth-child(1) {
-    
+    border:  0px solid rgb(36, 34, 34);
     column-gap: 10px;
     float: left ;
     width: 48%;
@@ -81,7 +82,7 @@ tr {
    
   }
   /* Clearfix (clear floats) */
-.column:nth-child(2) { 
+.column:nth-child(0) { 
   border:  10px solid rgb(196, 33, 33);
   column-gap: 10px;
   float: right ;
