--- a/client/src/pages/account/account.module.css
+++ b/client/src/pages/account/account.module.css
@@ -1,188 +1,193 @@
 /* Account.module.css */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  html, body{
-    height: 100%;
-    overflow: auto;
-    margin: 0;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
 
-  .pageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: rgb(253, 181, 21); /* Light gray background */
-  }
+html, body{
+  height: 100%;
+  overflow: auto;
+  margin: 0;
+}
 
-  
-  .loginBox {
-    background-color: white;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
-    max-width: 400px;
-    width: 100%; /* Responsive width */
-    border-radius: 25px;
-  }
-  
-  .title {
-    font-size: 24px;
-    font-weight: 600;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .formGroup {
-    margin-bottom: 15px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .label {
-    font-size: 20px;
-    color: #666;
-    margin-bottom: 5px;
-  }
-  
-  .input {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 9px;
-  }
-  
-  .button {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    background-color: hsl(35, 91%, 68%); /* Blue color */
-    color: rgb(19, 19, 19);
-    border: none;
-    border-radius: 9px;
-    cursor: pointer;
-    margin-top: 10px;
-    font-weight: 600;
-  }
-  
-  .button:hover {
-    background-color: rgb(253, 181, 21); /* Darker blue on hover */
-  }
-  
-  .passwordWrapper {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-  
-  .toggleButton {
-    margin-left: 10px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    color: #007bff;
-    font-size: 14px;
-  }
-  
-  .toggleButton:hover {
-    text-decoration: underline;
-  }
+.pageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(253, 181, 21); /* Light gray background */
+}
+
+.loginBox {
+  background-color: white;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+  max-width: 400px;
+  width: 100%; /* Responsive width */
+  border-radius: 25px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.formGroup {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.label {
+  font-size: 20px;
+  color: #666;
+  margin-bottom: 5px;
+}
+
+.input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 9px;
+}
+
+.button {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  background-color: hsl(35, 91%, 68%); /* Blue color */
+  color: rgb(19, 19, 19);
+  border: none;
+  border-radius: 9px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-weight: 600;
+}
+
+.button:hover {
+  background-color: rgb(253, 181, 21); /* Darker blue on hover */
+}
+
+.passwordWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.toggleButton {
+  margin-left: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #007bff;
+  font-size: 14px;
+}
+
+.toggleButton:hover {
+  text-decoration: underline;
+}
 
 
-  /*Create Post styles*/
-  .imagePreview {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    max-width: 100%;
-    height: auto;
-    overflow: hidden;
-  }
+/*Create Post styles*/
+.imagePreview {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+}
 
-  .previewImg{
-    max-width: 100%;
-    max-height: 300px;
-    object-fit: contain;
-    border-radius: 8px;
-  }
+.previewImg{
+  max-width: 50%;
+  max-height: 50%;
+  object-fit: contain;
+  border-radius: 8px;
+}
 
-  .postBox {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
-    max-width: 650px;
-    width: 100%; /* Responsive width */
-    border-radius: 25px;
-    min-height: 500px;
-  }
+.postBox {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+  max-width: 650px;
+  width: 100%; /* Responsive width */
+  border-radius: 25px;
+  min-height: 500px;
+}
 
-  .postPageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    background-color: rgb(253, 181, 21); /* Light gray background */
-    padding: 20px;
-    box-sizing: border-box;
-    overflow: auto;
-    padding-top: 40px;
-  }
-  .profileImage{
-    max-width: 100%;
-    height: auto;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  .profileContainer{
-    width: 175px;
-    height: 175px;
-    overflow: hidden;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.postPageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100vh;
+  background-color: rgb(253, 181, 21); /* Light gray background */
+  padding: 20px;
+  box-sizing: border-box;
+  overflow: auto;
+  padding-top: 40px;
+}
+.profileImage{
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.profileContainer{
+  width: 175px;
+  height: 175px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .username{
-    text-align: center;
-    font-size: 18px;
-    margin-top: 10px;
-    color: #333;
-    margin-left: 10px;
-  }
-  .profileBox {
-    background-color: white;
-    border-radius: 25px;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
-    max-width: 650px;
-    width: 100%; /* Responsive width */
-    min-height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 20px;
-    margin-left: 20px;
-  }
-  .profileWrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .alignContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 20px;
-  }
+.username{
+  text-align: center;
+  font-size: 12px;
+  margin-top: 10px;
+  color: #333;
+  margin-left: 10px;
+}
+.profileBox {
+  background-color: white;
+  border-radius: 25px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+  max-width: 650px;
+  width: 100%; /* Responsive width */
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  margin-left: 20px;
+}
+.profileBox h1 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.profileWrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20%;
+}
+.alignContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  background-color: rgb(253, 181, 21);
+}
